--- a/Ejercicio No.4
+++ b/Ejercicio No.4
@@ -4,7 +4,8 @@ public class Primeraclase
 
 	public static void main(String[] args) 
 	{ 
-		int juancho;
+		//juan felipe miranda 1080042208 unalmed
+  		int juancho;
 		double alberto;
 		double ana;
 		int mama;
